@@ -39,6 +39,7 @@
 
 /* For prefs */
 #define DEFAULT_PLAYLIST_TIME 72
+#define DEFAULT_MAX_WORKING_SET 1500
 
 #define HELP_TEXT "USAGE: gjay [--help] [-hdvpux] [-l length] [-c color]\n" \
                    "\t--help, -h  :  Display this help message\n" \
